# foxplayer

./: .gitignore  CLAUDE.md  CMakeLists.txt  IOS_PORT_PLAN.md  README.md
resources/: make_app_icon.py  make_fox_icon.py
src/: Constants.h  JuceCore.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.h  UIConstants.h
src/analysis/: AnalysisEngine.cpp  AnalysisEngine.h  AppleMusicLookup.cpp  AppleMusicLookup.h  BpmDetector.cpp  BpmDetector.h  KeyDetector.cpp  KeyDetector.h
src/audio/: AlbumArtExtractor.cpp  AlbumArtExtractor.h  AlbumArtExtractor.mm  AudioEngine.cpp  AudioEngine.h  FoxpFile.cpp  FoxpFile.h  PlayQueue.cpp  PlayQueue.h  StylFile.cpp  StylFile.h  TrackInfo.h
src/ui/: AnalysisLogWindow.cpp  AnalysisLogWindow.h  AutoHideViewport.h  Fonts.h  LoadingIndicator.h  MacWindowHelper.h  MacWindowHelper.mm  NowPlayingBridge.h  NowPlayingBridge.mm  PreferencesWindow.cpp  PreferencesWindow.h  QueueView.cpp  QueueView.h  SidebarComponent.cpp  SidebarComponent.h  SongInfoEditor.cpp  SongInfoEditor.h  Splash.h  StatusBarItem.h  StatusBarItem.mm  TransportBar.cpp  TransportBar.h
